# tauthoro

./: .dockerignore  .env.db.sample  .env.tauthoro.sample  .gitignore  Cargo.toml  Dockerfile  Dockerfile.deps  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml
docker/initdb.d/: database_dump.sample.sql
src/: main.rs
src/app/: auth.rs  database.rs  errors.rs  handlers.rs  mod.rs  records.rs
