[package]
name = "tauthoro"
version = "0.1.0"
authors = ["Maxime Buffa <mbuffa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.8.0"
log = "0.4"
mobc = "0.5"
mobc-postgres = { version = "0.5" }
pretty_env_logger = "0.4"
serde = { version = "1.0.110", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = "0.5.4"
warp = "0.2"
